<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tvshow.DetailTvShowFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_cover_detail"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_cover_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/sample_poster" />

        <TextView
            android:id="@+id/tv_title_detail_tvhow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_cover_detail"
            app:layout_constraintTop_toTopOf="@+id/img_cover_detail"
            tools:text="@string/a_star_is_bocrn_2018" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@+id/img_cover_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_col_release" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            tools:text="@string/drama_romance_music" />

        <TextView
            android:id="@+id/tv_col_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/release"
            app:layout_constraintStart_toStartOf="@+id/tv_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/score_bar"
            app:layout_constraintEnd_toEndOf="@+id/score_bar"
            app:layout_constraintStart_toStartOf="@+id/score_bar"
            app:layout_constraintTop_toTopOf="@+id/score_bar"
            tools:text="@string/_70" />

        <ProgressBar
            android:id="@+id/score_bar"
            style="@style/DonutProgressBar"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:max="10"
            android:padding="2dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:progress="6" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:drawableEnd="@drawable/ic_share"
            android:text="@string/share"
            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_bar" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/btn_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/favorite_state"
            android:backgroundTintMode="src_over"
            android:checked="false"
            android:drawableEnd="@drawable/icon_favorite_custom"
            android:textColor="@color/design_default_color_on_primary"
            android:textOff="@string/favorite"
            android:textOn="@string/unfavorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_share"
            app:layout_constraintTop_toTopOf="@+id/btn_share" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/score"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/btn_share"
            app:layout_constraintTop_toBottomOf="@+id/btn_share" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/overview_content" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_show"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail_tvhow"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_tvhow" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_col_release"
            app:layout_constraintTop_toTopOf="@+id/tv_col_release"
            tools:text="@string/_10_05_2018_us" />

        <ProgressBar
            android:id="@+id/progressBarLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>