<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/btn_favorite_toolbar"
    android:title=""
    android:icon="@drawable/ic_favorite_list"
    app:showAsAction="always"
    />
</menu>